# beat-detector

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  analysis.csv  check-build.sh  flake.nix  shell.nix
.cargo/: config.toml
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
benches/: beat_detection_bench.rs  general.rs
examples/: audio_input_beat_detection.rs  cpal-info.rs  cpal-minimal.rs  detect-beats-from-input-in-terminal.rs  live-input-minimal.rs  live-input-visualize.rs  minimal-cpal.rs  minimal-live-input-gui.rs  minimal-live-input.rs  minimal.rs  ws2812_spi_light_on_beat.rs
examples/_modules/: example_utils.rs
src/: audio_history.rs  audio_input.rs  band_analyzer.rs  band_pass_filter.rs  beat_detector.rs  downsampler.rs  envelope_iterator.rs  lib.rs  max_min_iterator.rs  record.rs  root_iterator.rs  sample.rs  test_utils.rs  util.rs
src/audio_analysis/: audio_history.rs  beat_detector.rs  max_min_iterator.rs  mod.rs  root_iterator.rs
src/audio_io/: mod.rs
src/audio_preprocessing/: audio_history.rs  conversion.rs  downsampling.rs  f32.rs  lowpass_filter.rs  mod.rs
src/layer_analysis/: audio_history.rs  max_min_iterator.rs  mod.rs  root_iterator.rs
src/layer_input_io/: recording.rs
src/layer_input_processing/: beat_detector.rs  downsampling.rs  f32.rs  lowpass_filter.rs  mod.rs
src/stdlib/: mod.rs  recording.rs
src/strategies/: lpf.rs  mod.rs  spectrum.rs  window_stats.rs
