[package]
name = "beat-detector"
description = """
beat-detector detects beats in live audio, but can also be used for post
analysis of audio data. It is a library written in Rust that is
`no_std`-compatible and doesn't need `alloc`.
"""
version = "0.2.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["audio", "beat", "beat-detection"]
categories = ["multimedia::audio", "no-std"]
readme = "README.md"
homepage = "https://github.com/phip1611/beat-detector"
repository = "https://github.com/phip1611/beat-detector"
documentation = "https://docs.rs/beat-detector"
exclude = [
    ".cargo",
    ".editorconfig",
    ".github",
    "check-build.sh",
    "demo.gif",
    "src/bin", # only internal binaries, if any
    "res"
]
rust-version = "1.76.0"

[features]
default = ["recording"]

# Marker/helper
std = []

# Actual features
recording = ["std", "dep:cpal"]

[[bench]]
name = "beat_detection_bench"
harness = false

[[bench]]
name = "general"
harness = false

[[example]]
name = "minimal-live-input"
required-features = ["recording"]

[[example]]
name = "minimal-live-input-gui"
required-features = ["recording"]

[dependencies]
# +++ NOSTD DEPENDENCIES +++

biquad = "0.4" # lowpass filter
libm = "0.2"# floating point operations
log = { version = "0.4", default-features = false }
ringbuffer = "0.15.0"

# +++ STD DEPENDENCIES +++
cpal = { version = "0.15", optional = true }


[dev-dependencies]
assert2 = "0.3.14"
ctrlc = { version = "3.4", features = ["termination"] }
criterion = { version = "0.5", features = [] }
float-cmp = "0.9.0"
itertools = "0.12.1"
simple_logger = "5.0"
minifb = "0.25.0"
rand = "0.8.5"
wav = "1.0"

[profile.dev]
# otherwise many code is too slow
# remove when using the debugger
# opt-level = 1

[profile.release]
# Trimmed to maximum performance.
#
# These changes only affects examples and tests build inside this crate but
# not libraries that use this.
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
